--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.4.0",
     "babel-plugin-macros": "^3.1.0",
+    "firebase": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "autoprefixer": "^10.4.14",
+    "daisyui": "^3.5.0",
     "eslint": "^8.44.0",
     "eslint-config-xo": "^0.43.1",
     "eslint-config-xo-react": "^0.27.0",
