--- a/.xo-config.json
+++ b/.xo-config.json
@@ -12,6 +12,7 @@
         ".png": "always",
         ".jpg": "always",
         ".jpeg": "always",
+        ".svg": "always",
         "": "always"
       }
     ],
@@ -24,7 +25,8 @@
         "css": "always",
         "png": "always",
         "jpg": "always",
-        "jpeg": "always"
+        "jpeg": "always",
+        "svg": "always"
       }
     ],
     "react/jsx-uses-react": "off",
