--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "@sanity/client": "^6.9.3",
+    "@sanity/image-url": "^1.0.2",
     "axios": "^1.4.0",
     "babel-plugin-macros": "^3.1.0",
     "date-fns": "^2.30.0",
