--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "babel-plugin-macros": "^3.1.0",
+    "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "firebase": "^10.1.0",
     "next": "^14.2.11",
