--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-fullscreen-loading": "^0.0.4",
+    "react-hook-form": "^7.53.0",
     "react-multi-carousel": "^2.8.5",
     "react-redux": "^8.1.2",
     "react-toastify": "^9.1.3"
