--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "@svgr/webpack": "^8.1.0",
     "axios": "^1.4.0",
     "babel-plugin-macros": "^3.1.0",
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "firebase": "^10.1.0",
+    "is-mobile": "^4.0.0",
     "next": "^14.2.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
